# rui

./: .gitignore  README.md  daemon.py  findrpc.md  findrpc.py  gui.py  install.sh  pyproject.toml  rpc.py  rpccli.py  rpcdaemon.py  rpcio.py  rpclist.py  rui.py  slider.py  testdev.py  tio.py
client/: call_io.py  cli.py  client.py  gui.py  itl.py  listfiles.py  main.py  process.py  rpc.py  search_select.py
client/lib/: listfiles.py  rpc.py  send_request.py  tio_tool.py
daemon/: daemon.py  main.py  process.py  server.py  spawn.py
lib/: listfiles.py  rpc.py  rpccli.py  rpcio.py  rpclist.py  tio.py
rpclib/: listfiles.py  rpc.py  rpccli.py  rpcio.py  rpclib.py  rpctypes.py  tio.py
rui/: __main__.py  cli.py  device.py  gui.py  main.py  min_max.py  rpc.py  rui.py
rui/app/: cli.py  gui.py  rui.py
rui/guilib/: min_max.py  rpcdisplay.py  style.py  toolbar.py
rui/lib/: call_io.py  cli.py  client.py  io_methods.py  list.py  listfiles.py  rpc.py  search_select.py
rui/test/: playback.py  record.py  rerecord.py  testdev.py
test/: maketest.py  playback.py  record.py  rerecord.py  testdev.py
test/recorded/: * -.transcript  + -.transcript  +.transcript  +_-.transcript  --root.transcript  Ki.transcript  KpKi.transcript  all opts.transcript  any.transcript  autostart.transcript  autotune start.transcript  bad argument.transcript  block.transcript  dash is empty flag.transcript  dash.transcript  different args.transcript  dont send action.transcript  dot arg search.transcript  dot exact.transcript  dot multisearch.transcript  double dash ignored.transcript  double dash separates flags.transcript  exact flag with dot.transcript  exact with dot.transcript  exact.transcript  fail to find.transcript  (+31 more)
(+88 files in other folders)
