[project]
name = "rui"
version = "1.0.0"
authors = [
	{ name= "Chris Zhao", email= "zhao@twinleaf.com" },
	{ name= "Ilysia Krzywonos", email= "krzywonos@twinleaf.com" },
]
description = "Rpc User Interface for Twinleaf RPCS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["twinleaf", "pyqt6", ]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
rui = "rui.rui:rui"
