[project]
name = "twinleaf-rui"
version = "1.1.0"
authors = [
	{ name= "Chris Zhao", email= "zhao@twinleaf.com" },
	{ name= "Ilysia Krzywonos", email= "krzywonos@twinleaf.com" },
]
description = "Rpc User Interface for Twinleaf RPCS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["twinleaf>=0.2.0", "pyqt6", ]
license = "MIT AND Apache-2.0"
license-files = [
  "LICENSE-APACHE.txt",
  "LICENSE-MIT.txt"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rui"]

[project.scripts]
rui = "rui.app.rui:rui"
